--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "mock": "json-server -w -p 3333 ./mock/database.json",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
@@ -26,6 +28,7 @@
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.25.0",
     "eslint-plugin-react": "^7.31.10",
+    "json-server": "^0.17.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
